--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "morgan": "^1.10.0",
