--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "repository": "https://github.com/skillyhub/jijenge-ai-bff.git",
   "author": "bvenceslas <bvenceslas@gmail.com>",
   "license": "MIT",
+  "private": true,
   "scripts": {
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.11.3",
+    "@grpc/proto-loader": "^0.7.13",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "groq-sdk": "^0.7.0",
+    "moment": "^2.30.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.7"
   }
