--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.21.0",
     "groq-sdk": "^0.7.0",
     "moment": "^2.30.1",
+    "mongoose": "^8.7.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.7"
   }
